[gd_scene load_steps=3 format=3 uid="uid://dif4ixw6stru8"]

[ext_resource type="Script" uid="uid://b24rf3hpdb8nv" path="res://addons/TaskRunner/Dock/NewTaskDialog.gd" id="1_cuwuy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4g5yo"]
bg_color = Color(0.21, 0.24, 0.29, 1)

[node name="NewTaskDialog" type="Window"]
oversampling_override = 1.0
title = "New Task"
initial_position = 4
size = Vector2i(600, 321)
wrap_controls = true
exclusive = true
unresizable = true
minimize_disabled = true
maximize_disabled = true
accessibility_name = "New Task Window"
accessibility_description = "Window used to create a new task either on disk on inline"
script = ExtResource("1_cuwuy")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4g5yo")

[node name="NewTaskContainer" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/NewTaskContainer"]
layout_mode = 2

[node name="NameSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
layout_mode = 2

[node name="TaskNameLabel" type="Label" parent="PanelContainer/NewTaskContainer/VBoxContainer/NameSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Task Name"

[node name="TaskNameEdit" type="LineEdit" parent="PanelContainer/NewTaskContainer/VBoxContainer/NameSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
layout_mode = 2

[node name="TaskTypeLabel" type="Label" parent="PanelContainer/NewTaskContainer/VBoxContainer/TypeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Task Type"

[node name="TaskTypeOption" type="OptionButton" parent="PanelContainer/NewTaskContainer/VBoxContainer/TypeSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SourceSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
layout_mode = 2

[node name="TaskSourceLabel" type="Label" parent="PanelContainer/NewTaskContainer/VBoxContainer/SourceSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Task Source"

[node name="TaskSourceOption" type="OptionButton" parent="PanelContainer/NewTaskContainer/VBoxContainer/SourceSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Inline"
popup/item_0/id = 0
popup/item_1/text = "On Disk"
popup/item_1/id = 1

[node name="TaskFolderSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskFolderLabel" type="Label" parent="PanelContainer/NewTaskContainer/VBoxContainer/TaskFolderSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Task Folder"

[node name="SelectTaskFolder" type="Button" parent="PanelContainer/NewTaskContainer/VBoxContainer/TaskFolderSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Folder"

[node name="TaskFolderEdit" type="LineEdit" parent="PanelContainer/NewTaskContainer/VBoxContainer/TaskFolderSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TaskFileNameSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskFileNameLabel" type="Label" parent="PanelContainer/NewTaskContainer/VBoxContainer/TaskFileNameSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Task File"

[node name="TaskFileNameEdit" type="LineEdit" parent="PanelContainer/NewTaskContainer/VBoxContainer/TaskFileNameSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Task File Name"

[node name="Control" type="Control" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="ActionsSection" type="HBoxContainer" parent="PanelContainer/NewTaskContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CreateButton" type="Button" parent="PanelContainer/NewTaskContainer/VBoxContainer/ActionsSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "Create"

[node name="Control" type="Control" parent="PanelContainer/NewTaskContainer/VBoxContainer/ActionsSection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/NewTaskContainer/VBoxContainer/ActionsSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "Cancel"
